--- a/index.html
+++ b/index.html
@@ -10,38 +10,27 @@
 </head>
 
 <body>
-
-
-
-
     <div id="container">
 
+        <section id="top">
+
+            <header>
+                <nav class="flex">
+                    <div>
+                        <img src="./assest/OneCare_Logo-03_3.webp" alt="logo">
+                    </div>
+                    <div class="flex1">
+                        <div class="blu-bg flex button"> <img src="./assest/Phone (1).webp" alt="logo"> Contact us</div>
+
+                        <div class="orange-bg flex button"> <img src="./assest/Planner.webp" alt="logo">Book an appointment</div>
+                    </div>
+                </nav>
+            </header>
 
 
 
 
-
-
-
-<section id="top">
-
-<header>
-    <nav>
-        <div>
-            <img src="./assest/OneCare_Logo-03_3.webp" alt="logo">
-        </div>
-        <div>
-            <div > <img src="./assest/Phone.webp" alt=""> Contact us</div>
-       
-            <div > <img src="./assest/Planner.webp" alt="">Book an appointment</div>
-        </div>
-    </nav>
-</header>
-
-
-
-
-</section>
+        </section>
 
 
 
