--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="flex1">
                         <div class="blu-bg flex button"> <img src="./assest/Phone (1).webp" alt="logo"> Contact us</div>
 
-                        <div class="orange-bg flex button"> <img src="./assest/Planner.webp" alt="logo">Book an appointment</div>
+                        <div class="orange-bg flex button"> <img src="./assest/Planner.webp" width="25px" alt="logo">Book an appointment</div>
                     </div>
                 </nav>
             </header>
