--- a/index.html
+++ b/index.html
@@ -12,23 +12,50 @@
 <body>
     <div id="container">
 
+        <header>
+            <nav class="flex">
+                <div>
+                    <img src="./assest/OneCare_Logo-03_3.webp" alt="logo">
+                </div>
+                <div class="flex1">
+                    <div class="blu-bg flex button"> <img src="./assest/Phone (1).webp" alt="logo"> Contact us</div>
+
+                    <div class="orange-bg flex button"> <img src="./assest/Planner.webp" width="25px" alt="logo">Book an
+                        appointment</div>
+                </div>
+            </nav>
+        </header>
+
         <section id="top">
 
-            <header>
-                <nav class="flex">
-                    <div>
-                        <img src="./assest/OneCare_Logo-03_3.webp" alt="logo">
+
+            <div class="responsive">
+
+                <div class="flex">
+                    <div class="flex1-col">
+                        <h1 class="orange-txt">Anup khees, Age-35 yrs</h1>
+                        <div class="flex">
+                            <div class="flex1">
+                                <img src="./assest/Rh+.webp" alt="logo">
+                                <h2 class="gray-txt">92/115</h2>
+                            </div>
+                            <div class="flex1">
+                                <img src="./assest/Pill.webp" alt="logo">
+                                <h2 class="gray-txt">50% Reduction</h2>
+                            </div>
+                        </div>
+
+                        <h2 class="gray-txt">My blood sugar level came down to 92/115 and my medicine dosage also got reduced to half and I'm very sure that it will stop completely in some time. I'm quite impressed with the doctor and health coach's style of personalised treatment.</h2>
+
+
+                        <div class="blu-bg button"><h3>Get Started.</h3></div>
                     </div>
-                    <div class="flex1">
-                        <div class="blu-bg flex button"> <img src="./assest/Phone (1).webp" alt="logo"> Contact us</div>
-
-                        <div class="orange-bg flex button"> <img src="./assest/Planner.webp" width="25px" alt="logo">Book an appointment</div>
-                    </div>
-                </nav>
-            </header>
+                    <div><img src="./assest/1_HEoLBLidT2u4mhJ0oiDgig 2 (1).webp" alt=""></div>
+                </div>
 
 
 
+            </div>
 
         </section>
 
