--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OneCare - A Chain of Smart Diabetes Clinics</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
 </head>
 
 <body>
@@ -53,7 +55,49 @@
                     <div><img src="./assest/1_HEoLBLidT2u4mhJ0oiDgig 2 (1).webp" alt=""></div>
                 </div>
 
+                <div class="flex">
+                    <div class="flex1-col">
+                        <h1 class="orange-txt">Anup khees, Age-35 yrs</h1>
+                        <div class="flex">
+                            <div class="flex1">
+                                <img src="./assest/Rh+.webp" alt="logo">
+                                <h2 class="gray-txt">92/115</h2>
+                            </div>
+                            <div class="flex1">
+                                <img src="./assest/Pill.webp" alt="logo">
+                                <h2 class="gray-txt">50% Reduction</h2>
+                            </div>
+                        </div>
 
+                        <h2 class="gray-txt">My blood sugar level came down to 92/115 and my medicine dosage also got reduced to half and I'm very sure that it will stop completely in some time. I'm quite impressed with the doctor and health coach's style of personalised treatment.</h2>
+
+
+                        <div class="blu-bg button"><h3>Get Started.</h3></div>
+                    </div>
+                    <div><img src="./assest/1_HEoLBLidT2u4mhJ0oiDgig 2 (1).webp" alt=""></div>
+                </div>
+
+                <div class="flex">
+                    <div class="flex1-col">
+                        <h1 class="orange-txt">Anup khees, Age-35 yrs</h1>
+                        <div class="flex">
+                            <div class="flex1">
+                                <img src="./assest/Rh+.webp" alt="logo">
+                                <h2 class="gray-txt">92/115</h2>
+                            </div>
+                            <div class="flex1">
+                                <img src="./assest/Pill.webp" alt="logo">
+                                <h2 class="gray-txt">50% Reduction</h2>
+                            </div>
+                        </div>
+
+                        <h2 class="gray-txt">My blood sugar level came down to 92/115 and my medicine dosage also got reduced to half and I'm very sure that it will stop completely in some time. I'm quite impressed with the doctor and health coach's style of personalised treatment.</h2>
+
+
+                        <div class="blu-bg button"><h3>Get Started.</h3></div>
+                    </div>
+                    <div><img src="./assest/1_HEoLBLidT2u4mhJ0oiDgig 2 (1).webp" alt=""></div>
+                </div>
 
             </div>
 
@@ -83,7 +127,8 @@
 
 
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./index.js"></script>
 </body>
 
