--- a/index.html
+++ b/index.html
@@ -32,73 +32,267 @@
 
 
             <div class="responsive">
-
-                <div class="flex">
-                    <div class="flex1-col">
-                        <h1 class="orange-txt">Anup khees, Age-35 yrs</h1>
-                        <div class="flex">
-                            <div class="flex1">
-                                <img src="./assest/Rh+.webp" alt="logo">
-                                <h2 class="gray-txt">92/115</h2>
+                <div>
+                    <div class="flex">
+                        <div class="flex1-col">
+                            <h1 class="orange-txt">Anup khees, Age-35 yrs</h1>
+                            <div class="flex">
+                                <div class="flex1">
+                                    <img src="./assest/Rh+.webp" alt="logo">
+                                    <h2 class="gray-txt">92/115</h2>
+                                </div>
+                                <div class="flex1">
+                                    <img src="./assest/Pill.webp" alt="logo">
+                                    <h2 class="gray-txt">50% Reduction</h2>
+                                </div>
                             </div>
-                            <div class="flex1">
-                                <img src="./assest/Pill.webp" alt="logo">
-                                <h2 class="gray-txt">50% Reduction</h2>
-                            </div>
-                        </div>
 
-                        <h2 class="gray-txt">My blood sugar level came down to 92/115 and my medicine dosage also got reduced to half and I'm very sure that it will stop completely in some time. I'm quite impressed with the doctor and health coach's style of personalised treatment.</h2>
+                            <h3 class="gray-txt">My blood sugar level came down to 92/115 and my medicine dosage also
+                                got reduced to half and I'm very sure that it will stop completely in some time. I'm
+                                quite impressed with the doctor and health coach's style of personalised treatment.</h3>
 
 
-                        <div class="blu-bg button"><h3>Get Started.</h3></div>
-                    </div>
-                    <div><img src="./assest/1_HEoLBLidT2u4mhJ0oiDgig 2 (1).webp" alt=""></div>
-                </div>
-
-                <div class="flex">
-                    <div class="flex1-col">
-                        <h1 class="orange-txt">Anup khees, Age-35 yrs</h1>
-                        <div class="flex">
-                            <div class="flex1">
-                                <img src="./assest/Rh+.webp" alt="logo">
-                                <h2 class="gray-txt">92/115</h2>
-                            </div>
-                            <div class="flex1">
-                                <img src="./assest/Pill.webp" alt="logo">
-                                <h2 class="gray-txt">50% Reduction</h2>
+                            <div class="blu-bg button">
+                                <h3>Get Started.</h3>
                             </div>
                         </div>
-
-                        <h2 class="gray-txt">My blood sugar level came down to 92/115 and my medicine dosage also got reduced to half and I'm very sure that it will stop completely in some time. I'm quite impressed with the doctor and health coach's style of personalised treatment.</h2>
-
-
-                        <div class="blu-bg button"><h3>Get Started.</h3></div>
+                        <div><img src="./assest/1_HEoLBLidT2u4mhJ0oiDgig 2 (1).webp" alt=""></div>
                     </div>
-                    <div><img src="./assest/1_HEoLBLidT2u4mhJ0oiDgig 2 (1).webp" alt=""></div>
                 </div>
 
-                <div class="flex">
-                    <div class="flex1-col">
-                        <h1 class="orange-txt">Anup khees, Age-35 yrs</h1>
-                        <div class="flex">
-                            <div class="flex1">
-                                <img src="./assest/Rh+.webp" alt="logo">
-                                <h2 class="gray-txt">92/115</h2>
+                <div>
+                    <div class="flex">
+                        <div class="flex1-col">
+                            <h1 class="orange-txt">Anup khees, Age-35 yrs</h1>
+                            <div class="flex">
+                                <div class="flex1">
+                                    <img src="./assest/Rh+.webp" alt="logo">
+                                    <h2 class="gray-txt">92/115</h2>
+                                </div>
+                                <div class="flex1">
+                                    <img src="./assest/Pill.webp" alt="logo">
+                                    <h2 class="gray-txt">50% Reduction</h2>
+                                </div>
                             </div>
-                            <div class="flex1">
-                                <img src="./assest/Pill.webp" alt="logo">
-                                <h2 class="gray-txt">50% Reduction</h2>
+
+                            <h3 class="gray-txt">My blood sugar level came down to 92/115 and my medicine dosage also
+                                got reduced to half and I'm very sure that it will stop completely in some time. I'm
+                                quite impressed with the doctor and health coach's style of personalised treatment.</h3>
+
+
+                            <div class="blu-bg button">
+                                <h3>Get Started.</h3>
                             </div>
                         </div>
-
-                        <h2 class="gray-txt">My blood sugar level came down to 92/115 and my medicine dosage also got reduced to half and I'm very sure that it will stop completely in some time. I'm quite impressed with the doctor and health coach's style of personalised treatment.</h2>
-
-
-                        <div class="blu-bg button"><h3>Get Started.</h3></div>
+                        <div><img src="./assest/slack-imgs-1 1.webp" alt=""></div>
                     </div>
-                    <div><img src="./assest/1_HEoLBLidT2u4mhJ0oiDgig 2 (1).webp" alt=""></div>
                 </div>
 
+                <div>
+                    <div class="flex">
+                        <div class="flex1-col">
+                            <h1 class="orange-txt">Anup khees, Age-35 yrs</h1>
+                            <div class="flex">
+                                <div class="flex1">
+                                    <img src="./assest/Rh+.webp" alt="logo">
+                                    <h2 class="gray-txt">92/115</h2>
+                                </div>
+                                <div class="flex1">
+                                    <img src="./assest/Pill.webp" alt="logo">
+                                    <h2 class="gray-txt">50% Reduction</h2>
+                                </div>
+                            </div>
+
+                            <h3 class="gray-txt">My blood sugar level came down to 92/115 and my medicine dosage also
+                                got reduced to half and I'm very sure that it will stop completely in some time. I'm
+                                quite impressed with the doctor and health coach's style of personalised treatment.</h3>
+
+
+                            <div class="blu-bg button">
+                                <h3>Get Started.</h3>
+                            </div>
+                        </div>
+                        <div><img src="./assest/istockphoto-1192489366-612x612 1.webp" alt=""></div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+
+        </section>
+
+
+        <section id="form-section">
+            <div class="flex">
+
+
+
+
+                <div>
+
+                    <h1 class="orange-txt">We know diabetes is a life-altering diagnosis.</h1>
+
+                    <h2>Our Comprehensive Clinical Care consists of 1-1 in-depth doctor consultation, expert dietitian
+                        sessions, and most importantly, a structured roadmap for your diabetes care.
+                        <br /><br />
+                        Visit your local OneCare clinic and let's fight it together.
+                    </h2>
+
+
+
+                </div>
+
+
+                <div>
+
+                    <h1>
+                        Start your <span class="orange-txt"> personalised diabetic program today!</span>
+                    </h1>
+
+
+                    <form action="">
+
+
+
+
+
+                        <input type="text" placeholder="Full Name" name="Name">
+                        <br />
+
+                        <br />
+
+
+
+                        <input type="number" placeholder="Phone" name="Phone">
+
+
+                        <br />
+
+                        <br />
+
+
+                        <div class="flex1">
+
+                            <div class="flex1"> <input type="checkbox" id="Online Consultation" name="Consultation" value="Online">
+                                <label for="Online Consultation"> Online Consultation</label>
+                            </div>
+                            <div  class="flex1"><input type="checkbox" id="Clinical_Consultation" name="Consultation" value="Clinical">
+                                <label for="Clinical_Consultation">Clinical Consultation</label>
+                            </div>
+
+                        </div>
+
+                        <br />
+
+                        <br />
+
+
+
+
+                    </form>
+
+
+
+
+
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+        <section id="promises">
+
+            <div class="flex" style="justify-content: center;">
+
+                <div class="flex-col2">
+                    <img src="./assest/Trust.webp" alt="logo">
+                    <h4 class=" white-col center-txt">Personalised Diabetes Care program designed 'Just for you'</h4>
+                </div>
+
+                <div class="flex-col2">
+                    <img src="./assest/People.webp" alt="logo">
+                    <h4 class=" white-col center-txt">A panel of expert for all your needs</h4>
+                </div>
+
+                <div class="flex-col2">
+                    <img src="./assest/Medical_Mobile_App.webp" alt="logo">
+                    <h4 class=" white-col center-txt">State-of-the-art Health Tracking App customised for you</h4>
+                </div>
+
+
+                <div class="flex-col2">
+                    <img src="./assest/Medical_Doctor.webp" alt="logo">
+                    <h4 class=" white-col center-txt">Dedicated Health Coach for day to day guidance</h4>
+                </div>
+
+            </div>
+
+
+
+        </section>
+
+        <section id="manage">
+            <h1 class="center-txt">Manage your diabetes in 3 easy steps</h1>
+            <div class="flex">
+
+
+                <div class="blue-shd-bg flex-col2 ">
+
+                    <img src="./assest/manage1.webp" alt="logo">
+
+
+
+                    <h2 class="drk-blu-txt">Step 1</h2>
+                    <h4 class="center-txt">Meet your team of expert diabetologists, health counsellors, dieticians at
+                        OneCare
+                        Smart Clinics & get expert diagnosis & insights on your diabetes management.</h4>
+                </div>
+                <div class="pink-shd-bg flex-col2">
+
+                    <img src="./assest/manage2.webp" alt="logo">
+
+
+
+                    <h2 class=" center-txt drk-blu-txt">Step 2</h2>
+                    <h4 class="center-txt">Get started on a personalised diabetes management journey designed around
+                        your needs to help you realise 10x better outcomes</h4>
+                </div>
+                <div class="blue-shd-bg flex-col2">
+
+                    <img src="./assest/manage3.webp" alt="logo">
+
+
+
+                    <h2 class=" center-txt drk-blu-txt">Step 3</h2>
+                    <h4 class="center-txt">Our panel of dedicated Health Coach will be with you every step of the way
+                        guiding you towards a better life beyond diabetes </h4>
+                </div>
             </div>
 
         </section>
@@ -106,6 +300,55 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+        <section class="blue-shd-bg">
+            <h1 class="center-txt">Consult with our Expert team of <br />
+                Endocrinologists & Diabetologists <span class="orange-txt">in Bangalore</span> </h1>
+
+
+
+            <div>
+
+
+                <div>
+                    <img src="./assest/doc1.webp" alt="logo">
+                    <div>
+
+
+
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </div>
+
+
+
+
+        </section>
     </div>
 
 
