--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
     <div id="container">
-
         <header>
             <nav class="flex">
                 <div>
@@ -27,7 +26,6 @@
                 </div>
             </nav>
         </header>
-
         <section id="top">
 
 
@@ -122,110 +120,43 @@
             </div>
 
         </section>
-
-
         <section id="form-section">
             <div class="flex">
-
-
-
-
                 <div>
-
                     <h1 class="orange-txt">We know diabetes is a life-altering diagnosis.</h1>
-
                     <h2>Our Comprehensive Clinical Care consists of 1-1 in-depth doctor consultation, expert dietitian
                         sessions, and most importantly, a structured roadmap for your diabetes care.
                         <br /><br />
                         Visit your local OneCare clinic and let's fight it together.
                     </h2>
-
-
-
                 </div>
-
-
                 <div>
-
                     <h1>
                         Start your <span class="orange-txt"> personalised diabetic program today!</span>
                     </h1>
-
-
                     <form action="">
-
-
-
-
-
                         <input type="text" placeholder="Full Name" name="Name">
                         <br />
-
                         <br />
-
-
-
                         <input type="number" placeholder="Phone" name="Phone">
-
-
                         <br />
-
                         <br />
-
-
                         <div class="flex1">
-
-                            <div class="flex1"> <input type="checkbox" id="Online Consultation" name="Consultation" value="Online">
+                            <div class="flex1"> <input type="checkbox" id="Online Consultation" name="Consultation"
+                                    value="Online">
                                 <label for="Online Consultation"> Online Consultation</label>
                             </div>
-                            <div  class="flex1"><input type="checkbox" id="Clinical_Consultation" name="Consultation" value="Clinical">
+                            <div class="flex1"><input type="checkbox" id="Clinical_Consultation" name="Consultation"
+                                    value="Clinical">
                                 <label for="Clinical_Consultation">Clinical Consultation</label>
                             </div>
-
                         </div>
-
                         <br />
-
                         <br />
-
-
-
-
                     </form>
-
-
-
-
-
                 </div>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         </section>
-
-
-
-
-
-
-
-
-
-
-
-
         <section id="promises">
 
             <div class="flex" style="justify-content: center;">
@@ -244,19 +175,13 @@
                     <img src="./assest/Medical_Mobile_App.webp" alt="logo">
                     <h4 class=" white-col center-txt">State-of-the-art Health Tracking App customised for you</h4>
                 </div>
-
-
                 <div class="flex-col2">
                     <img src="./assest/Medical_Doctor.webp" alt="logo">
                     <h4 class=" white-col center-txt">Dedicated Health Coach for day to day guidance</h4>
                 </div>
 
             </div>
-
-
-
         </section>
-
         <section id="manage">
             <h1 class="center-txt">Manage your diabetes in 3 easy steps</h1>
             <div class="flex">
@@ -299,39 +224,59 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-        <section class="blue-shd-bg">
+        <section id="Diabetologists" class="blue-shd-bg">
             <h1 class="center-txt">Consult with our Expert team of <br />
                 Endocrinologists & Diabetologists <span class="orange-txt">in Bangalore</span> </h1>
 
-
-
-            <div>
-
-
-                <div>
+            <div class="flex">
+                <div class="flex1">
                     <img src="./assest/doc1.webp" alt="logo">
                     <div>
 
+                        <h3>Dr. Basavaraj GS<br />
+                            MBBS, MD, DM <br />
+                            (Endocrinology)
+                        </h3>
+                        <h4 class="orange-txt">13+ years of experience <br />
 
-
+                            Associated with Narayana Hrudayalaya
+                        </h4>
+                        <div class="flex1"><img src="./assest/Thumbs Up.webp" alt="logo">98%  Approval on Practo</div>
                     </div>
                 </div>
 
 
 
 
+                <div class="flex">
+                    <img src="./assest/doc2png.webp" alt="logo">
+                    <div>
 
+                        <h3>Dr. Basavaraj GS<br />
+                            MBBS, MD, DM <br />
+                            (Endocrinology)
+                        </h3>
+                        <h4 class="orange-txt">13+ years of experience <br />
+
+                            Associated with Narayana Hrudayalaya
+                        </h4>
+                        <div class="flex1"><img src="./assest/Thumbs Up.webp" alt="logo">98%  Approval on Practo</div>
+                    </div>
+                </div>        <div class="flex">
+                    <img src="./assest/doc3.webp" alt="logo">
+                    <div>
+
+                        <h3>Dr. Basavaraj GS<br />
+                            MBBS, MD, DM <br />
+                            (Endocrinology)
+                        </h3>
+                        <h4 class="orange-txt">13+ years of experience <br />
+
+                            Associated with Narayana Hrudayalaya
+                        </h4>
+                        <div class="flex1"><img src="./assest/Thumbs Up.webp" alt="logo">98%  Approval on Practo</div>
+                    </div>
+                </div>
 
 
 
