--- a/amp-mobile.html
+++ b/amp-mobile.html
@@ -353,7 +353,7 @@
 
         .slide>div:last-child {
             position: relative;
-            top: 120px;
+            top: 190px;
 
 
         }
@@ -374,13 +374,11 @@
 
 <body>
     <div id="container">
-
-
         <header>
             <nav>
                 <div class="logo-wrapper">
                     <a href="/" class="logo">
-                        <amp-img src="./assest/OneCare Logo-03 3.png" width="3.2" height="1" layout="responsive"
+                        <amp-img src="./assest/OneCare_Logo-03_3.webp" width="3.2" height="1" layout="responsive"
                             alt="logo">
                         </amp-img>
                     </a>
@@ -397,7 +395,7 @@
 
             <div>
                 <amp-base-carousel height="500" layout="fixed-height" visible-count="1" advance-count="1"
-                    auto-advance='true' auto-advance-interval="1000">
+                    auto-advance='true' auto-advance-interval="100000000">
                     <div class="slide">
                         <div>
 
@@ -411,7 +409,7 @@
                             </div>
                         </div>
                         <div>
-                            <amp-img src="./assest/1_HEoLBLidT2u4mhJ0oiDgig 2 (1).png" width="3" height="2.7"
+                            <amp-img src="./assest/1_HEoLBLidT2u4mhJ0oiDgig 2 (1).webp" width="3" height="2.7"
                                 layout="responsive" alt="">
                             </amp-img>
                         </div>
@@ -431,7 +429,7 @@
                             </div>
                         </div>
                         <div>
-                            <amp-img src="./assest/istockphoto-1192489366-612x612 1.png" width="1.5" height="1"
+                            <amp-img src="./assest/istockphoto-1192489366-612x612 1.webp" width="1.5" height="1"
                                 layout="responsive" alt="">
                             </amp-img>
                         </div>
@@ -450,7 +448,7 @@
                             </div>
                         </div>
                         <div>
-                            <amp-img src="./assest/slack-imgs-1 1.png" width="3" height="1" layout="responsive" alt="">
+                            <amp-img src="./assest/slack-imgs-1 1.webp" width="1.5" height="1.3" layout="responsive" alt="">
                             </amp-img>
                         </div>
 
@@ -459,13 +457,6 @@
                 </amp-base-carousel>
             </div>
         </section>
-
-
-
-
-
-
-
 
         <section id="form-section">
 
@@ -499,7 +490,7 @@
 
                 </div>
                 <input class="blue-bg button" type="submit" value="SUBMIT">
-                <div submitting  style="position: absolute; background-color: gray;" >
+                <div submitting style="position: absolute; background-color: gray;">
                     <template type="amp-mustache">
                         MESSAGE OR LOADING GIF HERE
                     </template>
@@ -520,10 +511,6 @@
 
 
 
-
-
-
-
         <section id="manage">
             <h1 class=" center-txt orange-txt">Manage your diabetes <br /> in 3 easy steps</h1>
             <div id="manage-wrapper">
@@ -531,7 +518,7 @@
 
                 <div>
                     <div class="manage-img-wrapper">
-                        <amp-img src="./assest/manage1.png" width="1.5" height="1" layout="responsive" alt="logo">
+                        <amp-img src="./assest/manage1.webp" width="1.5" height="1" layout="responsive" alt="logo">
                         </amp-img>
                     </div>
 
@@ -550,7 +537,7 @@
 
                 <div>
                     <div class="manage-img-wrapper">
-                        <amp-img src="./assest/manage2.png" width="1.5" height="1" layout="responsive" alt="logo">
+                        <amp-img src="./assest/manage2.webp" width="1.5" height="1" layout="responsive" alt="logo">
                         </amp-img>
                     </div>
 
@@ -567,7 +554,7 @@
 
                 <div>
                     <div class="manage-img-wrapper">
-                        <amp-img src="./assest/manage3.png" width="1.5" height="1" layout="responsive" alt="logo">
+                        <amp-img src="./assest/manage3.webp" width="1.5" height="1" layout="responsive" alt="logo">
                         </amp-img>
                     </div>
 
@@ -601,7 +588,7 @@
                 <div>
 
                     <div class="Diabetologists-img-wrapper">
-                        <amp-img src="./assest/doc1.png" width="1" height="1" layout="responsive" alt="logo">
+                        <amp-img src="./assest/doc1.webp" width="1" height="1" layout="responsive" alt="logo">
                         </amp-img>
                     </div>
 
@@ -612,7 +599,7 @@
                         <h4 class="orange-txt">Associated with Narayana Hrudayalaya</h4>
                         <div style="display: flex;">
                             <div style="width: 6%;">
-                                <amp-img src="./assest/Thumbs Up.png" width="1" height="1" layout="responsive" alt="">
+                                <amp-img src="./assest/Thumbs Up.webp" width="1" height="1" layout="responsive" alt="">
                                 </amp-img>
                             </div>
                             <h4>98% Approval on Practo</h4>
@@ -628,7 +615,7 @@
                 <div>
 
                     <div class="Diabetologists-img-wrapper">
-                        <amp-img src="./assest/doc2png.png" width="1" height="1" layout="responsive" alt="logo">
+                        <amp-img src="./assest/doc2png.webp" width="1" height="1" layout="responsive" alt="logo">
                         </amp-img>
                     </div>
 
@@ -637,7 +624,7 @@
                         <h4 class="orange-txt"> 10+ years of experience</h4>
                         <div style="display: flex;">
                             <div style="width: 6%;">
-                                <amp-img src="./assest/Thumbs Up.png" width="1" height="1" layout="responsive" alt="">
+                                <amp-img src="./assest/Thumbs Up.webp" width="1" height="1" layout="responsive" alt="">
                                 </amp-img>
                             </div>
                             <h4>98% Approval on Practo</h4>
@@ -650,7 +637,7 @@
                 <div>
 
                     <div class="Diabetologists-img-wrapper">
-                        <amp-img src="./assest/doc3.png" width="1" height="1" layout="responsive" alt="logo">
+                        <amp-img src="./assest/doc3.webp" width="1" height="1" layout="responsive" alt="logo">
                         </amp-img>
                     </div>
 
@@ -666,7 +653,7 @@
                         <h4 class="orange-txt"> Associated with Apollo Hospitals</h4>
                         <div style="display: flex;">
                             <div style="width: 6%;">
-                                <amp-img src="./assest/Thumbs Up.png" width="1" height="1" layout="responsive" alt="">
+                                <amp-img src="./assest/Thumbs Up.webp" width="1" height="1" layout="responsive" alt="">
                                 </amp-img>
                             </div>
                             <h4>98% Approval on Practo</h4>
@@ -746,7 +733,7 @@
 
                         <div>
                             <div class="over-say-review-img-wrapper">
-                                <amp-img src="./assest/google.png" width="1" height="1" layout="responsive" alt="">
+                                <amp-img src="./assest/google.webp" width="1" height="1" layout="responsive" alt="">
                                 </amp-img>
                             </div>
                             <div class="over-say-review-detail-wrapper">
@@ -760,7 +747,7 @@
 
                         <div>
                             <div class="over-say-review-img-wrapper">
-                                <amp-img src="./assest/google.png" width="1" height="1" layout="responsive" alt="">
+                                <amp-img src="./assest/google.webp" width="1" height="1" layout="responsive" alt="">
                                 </amp-img>
                             </div>
                             <div class="over-say-review-detail-wrapper">
@@ -776,7 +763,7 @@
 
                         <div>
                             <div class="over-say-review-img-wrapper">
-                                <amp-img src="./assest/google.png" width="1" height="1" layout="responsive" alt="">
+                                <amp-img src="./assest/google.webp" width="1" height="1" layout="responsive" alt="">
                                 </amp-img>
                             </div>
                             <div class="over-say-review-detail-wrapper">
@@ -790,7 +777,7 @@
                         </div>
                         <div>
                             <div class="over-say-review-img-wrapper">
-                                <amp-img src="./assest/p-Vector.png" width="1" height="1" layout="responsive" alt="">
+                                <amp-img src="./assest/p-Vector.webp" width="1" height="1" layout="responsive" alt="">
                                 </amp-img>
                             </div>
                             <div class="over-say-review-detail-wrapper">
@@ -803,7 +790,7 @@
                         </div>
                         <div>
                             <div class="over-say-review-img-wrapper">
-                                <amp-img src="./assest/p-Vector.png" width="1" height="1" layout="responsive" alt="">
+                                <amp-img src="./assest/p-Vector.webp" width="1" height="1" layout="responsive" alt="">
                                 </amp-img>
                             </div>
                             <div class="over-say-review-detail-wrapper">
@@ -816,7 +803,7 @@
                         </div>
                         <div>
                             <div class="over-say-review-img-wrapper">
-                                <amp-img src="./assest/p-Vector.png" width="1" height="1" layout="responsive" alt="">
+                                <amp-img src="./assest/p-Vector.webp" width="1" height="1" layout="responsive" alt="">
                                 </amp-img>
                             </div>
                             <div class="over-say-review-detail-wrapper">
@@ -851,7 +838,7 @@
 
             <div>
                 <div id="map-img-wrapper">
-                    <amp-img src="./assest/map.png" width="1.2" height="1" layout="responsive" alt="logo">
+                    <amp-img src="./assest/map.webp" width="1.2" height="1" layout="responsive" alt="logo">
                     </amp-img>
 
                 </div>
@@ -861,7 +848,7 @@
                         <div>
                             <div class="flex1">
                                 <div class="location-img-wrapper">
-                                    <amp-img src="./assest/Location.png" width="1" height="1" layout="responsive"
+                                    <amp-img src="./assest/Location.webp" width="1" height="1" layout="responsive"
                                         alt="">
                                     </amp-img>
                                 </div>
@@ -876,7 +863,7 @@
                             </div>
                             <div class="flex">
                                 <div style="width:10%">
-                                    <amp-img src="./assest/Phone.png" width="1" height="1" layout="responsive"
+                                    <amp-img src="./assest/Phone.webp" width="1" height="1" layout="responsive"
                                         alt="logo">
                                     </amp-img>
                                 </div>
@@ -885,14 +872,14 @@
                             <div class="flex">
                                 <h3 style="margin: 5px;">4.9</h3>
                                 <div style="width: 40%;">
-                                    <amp-img src="./assest/stars.png" width="5" height="1" layout="responsive" alt="">
+                                    <amp-img src="./assest/stars.webp" width="5" height="1" layout="responsive" alt="">
                                     </amp-img>
                                 </div>
                             </div>
                         </div>
 
                         <div style="width: 500px;">
-                            <amp-img src="./assest/Rectangle 136.png" width="1.2" height="1" layout="responsive"
+                            <amp-img src="./assest/Rectangle 136.webp" width="1.2" height="1" layout="responsive"
                                 alt="logo">
                             </amp-img>
                         </div>
@@ -915,7 +902,7 @@
                         <div>
                             <div class="flex1">
                                 <div class="location-img-wrapper">
-                                    <amp-img src="./assest/Location.png" width="1" height="1" layout="responsive"
+                                    <amp-img src="./assest/Location.webp" width="1" height="1" layout="responsive"
                                         alt="">
                                     </amp-img>
                                 </div>
@@ -929,7 +916,7 @@
                             </div>
                             <div class="flex">
                                 <div style="width:10%">
-                                    <amp-img src="./assest/Phone.png" width="1" height="1" layout="responsive"
+                                    <amp-img src="./assest/Phone.webp" width="1" height="1" layout="responsive"
                                         alt="logo">
                                     </amp-img>
                                 </div>
@@ -938,14 +925,14 @@
                             <div class="flex">
                                 <h3 style="margin: 5px;">4.9</h3>
                                 <div style="width: 40%;">
-                                    <amp-img src="./assest/stars.png" width="5" height="1" layout="responsive" alt="">
+                                    <amp-img src="./assest/stars.webp" width="5" height="1" layout="responsive" alt="">
                                     </amp-img>
                                 </div>
                             </div>
                         </div>
 
                         <div style="width: 500px;">
-                            <amp-img src="./assest/Rectangle 137.png" width="1.2" height="1" layout="responsive"
+                            <amp-img src="./assest/Rectangle 137.webp" width="1.2" height="1" layout="responsive"
                                 alt="logo">
                             </amp-img>
                         </div>
@@ -967,7 +954,7 @@
                         <div>
                             <div class="flex1">
                                 <div class="location-img-wrapper">
-                                    <amp-img src="./assest/Location.png" width="1" height="1" layout="responsive"
+                                    <amp-img src="./assest/Location.webp" width="1" height="1" layout="responsive"
                                         alt="">
                                     </amp-img>
                                 </div>
@@ -981,7 +968,7 @@
                             </div>
                             <div class="flex">
                                 <div style="width:10%">
-                                    <amp-img src="./assest/Phone.png" width="1" height="1" layout="responsive"
+                                    <amp-img src="./assest/Phone.webp" width="1" height="1" layout="responsive"
                                         alt="logo">
                                     </amp-img>
                                 </div>
@@ -990,14 +977,14 @@
                             <div class="flex">
                                 <h3 style="margin: 5px;">4.9</h3>
                                 <div style="width: 40%;">
-                                    <amp-img src="./assest/stars.png" width="5" height="1" layout="responsive" alt="">
+                                    <amp-img src="./assest/stars.webp" width="5" height="1" layout="responsive" alt="">
                                     </amp-img>
                                 </div>
                             </div>
                         </div>
 
                         <div style="width: 500px;">
-                            <amp-img src="./assest/Rectangle 145.png" width="1.2" height="1" layout="responsive"
+                            <amp-img src="./assest/Rectangle 145.webp" width="1.2" height="1" layout="responsive"
                                 alt="logo">
                             </amp-img>
                         </div>
@@ -1046,7 +1033,7 @@ linear-gradient(0deg, #C4C4C4, #C4C4C4);
                         <p>Take Online Doctor Consultation</p>
                     </div>
                     <div style="width: 200px;">
-                        <amp-img src="./assest/istockphoto-1294132648-612x612 1.png" width="1.3" height="1"
+                        <amp-img src="./assest/istockphoto-1294132648-612x612 1.webp" width="1.3" height="1"
                             layout="responsive" alt="">
                         </amp-img>
                     </div>
@@ -1156,7 +1143,7 @@ linear-gradient(0deg, #C4C4C4, #C4C4C4);
             <nav>
                 <div class="logo-wrapper">
                     <a href="/" class="logo">
-                        <amp-img src="./assest/OneCare Logo-03 3.png" width="3.5" height="1" layout="responsive"
+                        <amp-img src="./assest/OneCare Logo-03 3.webp" width="3.5" height="1" layout="responsive"
                             alt="logo">
                         </amp-img>
 
