--- a/index.html
+++ b/index.html
@@ -294,6 +294,36 @@
 
 
         </section>
+
+<section id="impact">
+
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
 
 
