--- a/amp-mobile.html
+++ b/amp-mobile.html
@@ -142,7 +142,7 @@
             font-weight: 700;
             line-height: 18px;
             letter-spacing: 0em;
-            margin: 10px 0px;
+        
         }
 
         .blue-bg {
@@ -183,7 +183,7 @@
             box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
         }
 
-        header nav div {
+        header nav div,footer nav div {
             display: flex;
             align-items: center;
             width: 50%;
@@ -271,17 +271,19 @@
         }
 
         #Diabetologists-wrapper {
-            width: 80%;
+            width: 90%;
             margin: auto;
         }
 
         #Diabetologists-wrapper>div {
             display: flex;
             margin: 30px 0px;
+            border: 1px solid white;
         }
 
         .Diabetologists-img-wrapper {
-            width: 100px;
+            width: 42%;
+          margin-right: 10px;
         }
 
         #user-say {
@@ -323,7 +325,7 @@
         }
 
         .map-btn-wrapper>div {
-            width: 48%;
+            width: 50%;
             color: white;
             margin: 2px;
             padding: 10px;
@@ -354,8 +356,10 @@
         .slide>div:last-child {
             position: relative;
             top: 190px;
+        }
 
-
+        #location div h1 {
+            margin-left: 20px;
         }
 
         .slide>div:first-child {
@@ -366,7 +370,13 @@
             position: absolute;
             flex-direction: column;
             align-items: flex-start;
+        }
 
+        .loc-detail {
+            margin-right: 10px;
+        }
+        #FAQ{
+            background: #FFF5E7;
         }
     </style>
 
@@ -418,7 +428,6 @@
                     <div class="slide">
                         <div>
 
-
                             <h1 class="orange-txt">Live a life beyond diabetes,<br /> starting today.</h1>
 
                             <p>Our team includes leading diabetologists, endocrinologists, diabetes educators,
@@ -437,8 +446,6 @@
                     </div>
                     <div class="slide">
                         <div>
-
-
                             <h1>Don't just fight diabetes,<br /> understand & manage it.</h1>
 
                             <p>Diabetes care is unique to everyone. Beat it with the Right Approach that works for you.
@@ -448,7 +455,8 @@
                             </div>
                         </div>
                         <div>
-                            <amp-img src="./assest/slack-imgs-1 1.webp" width="1.5" height="1.3" layout="responsive" alt="">
+                            <amp-img src="./assest/slack-imgs-1 1.webp" width="1.5" height="1.3" layout="responsive"
+                                alt="">
                             </amp-img>
                         </div>
 
@@ -593,10 +601,10 @@
                     </div>
 
                     <div>
-                        <h3> Dr. Basavaraj GS<br />
-                            MBBS, MD, DM<br /> (Endocrinology) </h3>
-                        <h4 class="orange-txt">13+ years of experience</h4>
-                        <h4 class="orange-txt">Associated with Narayana Hrudayalaya</h4>
+                        <h4> Dr. Basavaraj GS<br />
+                            MBBS, MD, DM<br /> (Endocrinology) </h4>
+                        <h4 class="orange-txt">13+ years of experience<br/>
+                   Associated with Narayana Hrudayalaya</h4>
                         <div style="display: flex;">
                             <div style="width: 6%;">
                                 <amp-img src="./assest/Thumbs Up.webp" width="1" height="1" layout="responsive" alt="">
@@ -620,7 +628,7 @@
                     </div>
 
                     <div>
-                        <h3> Dr. C Siva Rama Krishna<br /> MD, M.H. Sc.<br /> (Diabetology)</h3>
+                        <h4> Dr. C Siva Rama Krishna<br /> MD, M.H. Sc.<br /> (Diabetology)</h4>
                         <h4 class="orange-txt"> 10+ years of experience</h4>
                         <div style="display: flex;">
                             <div style="width: 6%;">
@@ -642,15 +650,15 @@
                     </div>
 
                     <div>
-                        <h3> Dr. Lavanya<br />
+                        <h4> Dr. Lavanya<br />
                             MBBS<br />
                             (Diabetology)
 
-                        </h3>
+                        </h4>
 
-                        <h4 class="orange-txt"> 17+ years of experience</h4>
+                        <h4 class="orange-txt"> 17+ years of experience<br/>
 
-                        <h4 class="orange-txt"> Associated with Apollo Hospitals</h4>
+                         Associated with Apollo Hospitals</h4>
                         <div style="display: flex;">
                             <div style="width: 6%;">
                                 <amp-img src="./assest/Thumbs Up.webp" width="1" height="1" layout="responsive" alt="">
@@ -738,6 +746,12 @@
                             </div>
                             <div class="over-say-review-detail-wrapper">
                                 <h4 class="orange-txt">Laxminarasimha Reddy</h4>
+                                <div style="width:60px; margin: 5px  0px;"><amp-img src="./assest/stars.webp"
+                                  width="3.5"
+                                  height="1"
+                                  layout="responsive"
+                                  alt="logo">
+                                </amp-img></div>
                                 <p class="gray-txt">A great place for total Diabetes care. The front desk and customer
                                     care explains the
                                     program in detail. Doctors and Dieticians are well qualified.
@@ -752,6 +766,12 @@
                             </div>
                             <div class="over-say-review-detail-wrapper">
                                 <h4 class="orange-txt">Deepa Kamath</h4>
+                                <div style="width:60px; margin: 5px  0px;"><amp-img src="./assest/stars.webp"
+                                    width="3.5"
+                                    height="1"
+                                    layout="responsive"
+                                    alt="logo">
+                                  </amp-img></div>
                                 <p class="gray-txt">A great place for total Diabetes care. The front desk and customer
                                     care explains the
                                     program in detail. Doctors and Dieticians are well qualified.
@@ -768,6 +788,12 @@
                             </div>
                             <div class="over-say-review-detail-wrapper">
                                 <h4 class="orange-txt">Deepa Kamath</h4>
+                                <div style="width:60px; margin: 5px  0px;"><amp-img src="./assest/stars.webp"
+                                    width="3.5"
+                                    height="1"
+                                    layout="responsive"
+                                    alt="logo">
+                                  </amp-img></div>
                                 <p class="gray-txt">A great place for total Diabetes care. The front desk and customer
                                     care explains the
                                     program in detail. Doctors and Dieticians are well qualified.
@@ -782,6 +808,12 @@
                             </div>
                             <div class="over-say-review-detail-wrapper">
                                 <h4 class="orange-txt">Deepa Kamath</h4>
+                                <div style="width:60px; margin: 5px  0px;"><amp-img src="./assest/stars.webp"
+                                    width="3.5"
+                                    height="1"
+                                    layout="responsive"
+                                    alt="logo">
+                                  </amp-img></div>
                                 <p>A great place for total Diabetes care. The front desk and customer care explains the
                                     program in detail. Doctors and Dieticians are well qualified.
                                     No delay in follow up consultations too! Would recommend to my family n friends</p>
@@ -795,6 +827,12 @@
                             </div>
                             <div class="over-say-review-detail-wrapper">
                                 <h4 class="orange-txt">Deepa Kamath</h4>
+                                <div style="width:60px; margin: 5px  0px;"><amp-img src="./assest/stars.webp"
+                                    width="3.5"
+                                    height="1"
+                                    layout="responsive"
+                                    alt="logo">
+                                  </amp-img></div>
                                 <p>A great place for total Diabetes care. The front desk and customer care explains the
                                     program in detail. Doctors and Dieticians are well qualified.
                                     No delay in follow up consultations too! Would recommend to my family n friends</p>
@@ -808,6 +846,12 @@
                             </div>
                             <div class="over-say-review-detail-wrapper">
                                 <h4 class="orange-txt">Deepa Kamath</h4>
+                                <div style="width:60px; margin: 5px  0px;"><amp-img src="./assest/stars.webp"
+                                    width="3.5"
+                                    height="1"
+                                    layout="responsive"
+                                    alt="logo">
+                                  </amp-img></div>
                                 <p>A great place for total Diabetes care. The front desk and customer care explains the
                                     program in detail. Doctors and Dieticians are well qualified.
                                     No delay in follow up consultations too! Would recommend to my family n friends</p>
@@ -845,7 +889,7 @@
                 <div>
                     <h1 class="orange-txt">Bellandur</h1>
                     <div class="flex">
-                        <div>
+                        <div class="loc-detail">
                             <div class="flex1">
                                 <div class="location-img-wrapper">
                                     <amp-img src="./assest/Location.webp" width="1" height="1" layout="responsive"
@@ -867,7 +911,7 @@
                                         alt="logo">
                                     </amp-img>
                                 </div>
-                                <h2>080 4680 8989</h2>
+                                <h3>080 4680 8989</h3>
                             </div>
                             <div class="flex">
                                 <h3 style="margin: 5px;">4.9</h3>
@@ -899,7 +943,7 @@
                 <div>
                     <h1 class="orange-txt">Koramangala</h1>
                     <div class="flex">
-                        <div>
+                        <div class="loc-detail">
                             <div class="flex1">
                                 <div class="location-img-wrapper">
                                     <amp-img src="./assest/Location.webp" width="1" height="1" layout="responsive"
@@ -920,7 +964,7 @@
                                         alt="logo">
                                     </amp-img>
                                 </div>
-                                <h2>080 4680 8989</h2>
+                                <h3>080 4680 8989</h3>
                             </div>
                             <div class="flex">
                                 <h3 style="margin: 5px;">4.9</h3>
@@ -951,7 +995,7 @@
                 <div>
                     <h1 class="orange-txt">Indiranagar</h1>
                     <div class="flex">
-                        <div>
+                        <div class="loc-detail">
                             <div class="flex1">
                                 <div class="location-img-wrapper">
                                     <amp-img src="./assest/Location.webp" width="1" height="1" layout="responsive"
@@ -972,7 +1016,7 @@
                                         alt="logo">
                                     </amp-img>
                                 </div>
-                                <h2>080 4680 8989</h2>
+                                <h3>080 4680 8989</h3>
                             </div>
                             <div class="flex">
                                 <h3 style="margin: 5px;">4.9</h3>
@@ -1024,15 +1068,13 @@
 
 
 
-            <div style="background: linear-gradient(177.97deg, #D0F2FF 1.72%, #FFFFFF 98.52%),
-linear-gradient(0deg, #C4C4C4, #C4C4C4);
-">
+            <div style="background: linear-gradient(177.97deg, #D0F2FF 1.72%, #FFFFFF 98.52%)">
                 <div class="flex" style="padding: 10px;">
                     <div>
                         <h2 class="drk-blu-txt">Skip the travel!</h2>
-                        <p>Take Online Doctor Consultation</p>
+                        <p>Take Online Doctor Consultation <br/>Private video consultation</p>
                     </div>
-                    <div style="width: 200px;">
+                    <div style="margin: 20px; flex:1;">
                         <amp-img src="./assest/istockphoto-1294132648-612x612 1.webp" width="1.3" height="1"
                             layout="responsive" alt="">
                         </amp-img>
@@ -1049,7 +1091,7 @@ linear-gradient(0deg, #C4C4C4, #C4C4C4);
             </div>
             <div>
 
-                <h3 class="center-txt">How technology-enabled OneCare Diabetes
+                <h3 class="center-txt">How technology-enabled OneCare Diabetes<br/>
                     Clinics provide better outcomes:</h3>
 
 
@@ -1107,6 +1149,34 @@ linear-gradient(0deg, #C4C4C4, #C4C4C4);
 
 
 
+<section id="FAQ">
+<h1 class="center-txt drk-blu-txt">FAQs</h1>
+
+
+
+<div>
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+</section>
 
 
 
@@ -1137,26 +1207,22 @@ linear-gradient(0deg, #C4C4C4, #C4C4C4);
 
 
 
-
-        <!-- 
         <footer>
             <nav>
                 <div class="logo-wrapper">
                     <a href="/" class="logo">
-                        <amp-img src="./assest/OneCare Logo-03 3.webp" width="3.5" height="1" layout="responsive"
+                        <amp-img src="./assest/OneCare_Logo-03_3.webp" width="3.2" height="1" layout="responsive"
                             alt="logo">
                         </amp-img>
-
                     </a>
 
                 </div>
-
                 <div>
-                    <h4>© 2021, OneCare. All Rights Reserved</h4>
+                    <p class="gray-txt web"> A Chain of <BR />Smart Diabetes Clinics</p>
 
                 </div>
             </nav>
-        </footer> -->
+        </footer>
     </div>
 </body>
 
