--- a/amp-mobile.html
+++ b/amp-mobile.html
@@ -192,7 +192,10 @@
         footer nav div {
             display: flex;
             align-items: center;
-            width: 50%;
+        }
+        header nav div:last-child,
+        footer nav div:last-child{
+            border-left: 1px solid ;
         }
 
         header nav,
