--- a/amp-mobile.html
+++ b/amp-mobile.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html amp lang="en" data-ampdevmode>
+<html amp lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -1018,7 +1018,7 @@
                         <div class="flex">
 
                             <div class="flex" style="flex: 1;">
-                                <div style="width: 65px; margin: 20px;">
+                                <div style="width: 50px; margin: 20px;">
                                     <amp-img src="./assest/pink5.webp" width="1" height="2" layout="responsive" alt="">
                                     </amp-img>
                                 </div>
