--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             font-size: 12px;
             font-style: normal;
             font-weight: 600;
-            line-height: 15px;
+            line-height: 18px;
             letter-spacing: 0em;
         }
 
@@ -307,6 +307,7 @@
         }
 
         .doc-det {
+            margin: 15px;
             width: 60%;
         }
 
