--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <title>OneCare - A Chain of Smart Diabetes Clinics</title>
+    <title>OneCare - A Chain of Smart Diabetes Clinics</title> <meta name="amp-script-src" content="sha384-AGfIK3xyyrcRWR-yI0HPk91gLZag7-SfA97XEQPAr6URvgIR5UqO5YALuid0V-7t">.
     <link rel="canonical" href="https://amp.dev/documentation/guides-and-tutorials/start/create/basic_markup/">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
@@ -302,7 +302,7 @@
         }
 
         .Diabetologists-img-wrapper {
-            width: 35%;
+            width: 190px;
             margin-right: 10px;
         }
 
